--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ __pycache__
 /db
 *.log
 .idea
+
+/src/bootstrap
+/src/bootsrap-icons
+/src/EncryptedSession
+/src/gnucash
+/src/selectize
+/venv
+/gnucash-web
